javsScript toggle "read more"
added some javaScript to toggle the hidden content for the newest article

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="styles.css" />
-        <title>Document</title>
+        <title>its yaboiii</title>
     </head>
     <body>
         <!-- <header>
@@ -72,7 +72,24 @@
                             id excepturi porro? Provident cum aliquid incidunt
                             vero quos aliquam facilis ut dolore quaerat.
                         </p>
-                        <div class="newest-post__button">Read more...</div>
+                        <p class="newest-post__hidden-p" id="hidden-p">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Quam labore molestias deserunt, fuga, maiores
+                            odit quia nisi qui repellendus sequi dicta eaque
+                            tenetur quae, recusandae assumenda laborum.
+                            Provident reprehenderit, commodi, aperiam amet
+                            molestiae voluptate soluta cum mollitia delectus
+                            nostrum velit quas sit quos qui harum ducimus, rem
+                            aliquid omnis! Ea fuga, obcaecati assumenda labore
+                            autem reprehenderit dolor impedit amet expedita, ex
+                            accusamus repellendus modi in perferendis animi?
+                            Voluptatibus recusandae minus enim ratione? Error
+                            dolorem libero perferendis ipsa, earum nobis atque
+                            ducimus laudantium obcaecati labore et sit sequi,
+                            nisi ab enim ex asperiores soluta delectus tempore
+                            assumenda neque ipsam quo! Et.
+                        </p>
+                        <div id="newest-post__button">Read more...</div>
                     </div>
 
                     <div class="card-preview">
@@ -104,11 +121,12 @@
                             id excepturi porro? Provident cum aliquid incidunt
                             vero quos aliquam facilis ut dolore quaerat.
                         </p>
-                        <div class="card__button">Read more...</div>
+                        <div class="card__button">Read More...</div>
                     </div>
                 </div>
             </div>
             <div class="grid-item-3 footer"></div>
         </div>
+        <script src="script.js"></script>
     </body>
 </html>
