added some stuff
added fade in animation for the hidden content when you click read more. restructured some of the html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                         ></iframe>
-                        <p class="newest-post__p">
+                        <p class="newest-post__p" id="first-p">
                             Lorem ipsum dolor sit amet consectetur adipisicing
                             elit. Qui in odit dicta dolorem non sequi, rerum
                             consequatur ipsa dolore quasi sint ratione repellat
@@ -72,27 +72,56 @@
                             id excepturi porro? Provident cum aliquid incidunt
                             vero quos aliquam facilis ut dolore quaerat.
                         </p>
-                        <p class="newest-post__hidden-p" id="hidden-p">
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Quam labore molestias deserunt, fuga, maiores
-                            odit quia nisi qui repellendus sequi dicta eaque
-                            tenetur quae, recusandae assumenda laborum.
-                            Provident reprehenderit, commodi, aperiam amet
-                            molestiae voluptate soluta cum mollitia delectus
-                            nostrum velit quas sit quos qui harum ducimus, rem
-                            aliquid omnis! Ea fuga, obcaecati assumenda labore
-                            autem reprehenderit dolor impedit amet expedita, ex
-                            accusamus repellendus modi in perferendis animi?
-                            Voluptatibus recusandae minus enim ratione? Error
-                            dolorem libero perferendis ipsa, earum nobis atque
-                            ducimus laudantium obcaecati labore et sit sequi,
-                            nisi ab enim ex asperiores soluta delectus tempore
-                            assumenda neque ipsam quo! Et.
-                        </p>
-                        <div id="newest-post__button">Read more...</div>
+                        <div class="newest-post__hidden" id="hidden">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Quam labore molestias
+                                deserunt, fuga, maiores odit quia nisi qui
+                                repellendus sequi dicta eaque tenetur quae,
+                                recusandae assumenda laborum. Provident
+                                reprehenderit, commodi, aperiam amet molestiae
+                                voluptate soluta cum mollitia delectus nostrum
+                                velit quas sit quos qui harum ducimus, rem
+                                aliquid omnis! Ea fuga, obcaecati assumenda
+                                labore autem reprehenderit dolor impedit amet
+                                expedita, ex accusamus repellendus modi in
+                                perferendis animi? Voluptatibus recusandae minus
+                                enim ratione? Error dolorem libero perferendis
+                                ipsa, earum nobis atque ducimus laudantium
+                                obcaecati labore et sit sequi, nisi ab enim ex
+                                asperiores soluta delectus tempore assumenda
+                                neque ipsam quo! Et. lorem100
+                            </p>
+
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Quam labore molestias
+                                deserunt, fuga, maiores odit quia nisi qui
+                                repellendus sequi dicta eaque tenetur quae,
+                                recusandae assumenda laborum. Provident
+                                reprehenderit, commodi, aperiam amet molestiae
+                                voluptate soluta cum mollitia delectus nostrum
+                                velit quas sit quos qui harum ducimus, rem
+                                aliquid omnis! Ea fuga, obcaecati assumenda
+                                labore autem 
+                                <blockquote>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quis vel quibusdam, dolore, error consectetur autem libero ullam suscipit delectus dicta voluptas facere sed! Id exercitationem laboriosam rem numquam, distinctio suscipit repudiandae excepturi ipsa similique, vitae sequi esse ut iure molestiae aliquam perspiciatis. Quos, sunt?"</blockquote>
+                                <p>reprehenderit dolor impedit amet
+                                expedita, ex accusamus repellendus modi in
+                                perferendis animi? Voluptatibus recusandae minus
+                                enim ratione? Error dolorem libero perferendis
+                                ipsa, earum nobis atque ducimus laudantium
+                                obcaecati labore et sit sequi, nisi ab enim ex
+                                asperiores soluta delectus tempore assumenda
+                                neque ipsam quo! Et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores laboriosam perspiciatis accusantium quae sit, dolore reiciendis, aspernatur quas exercitationem quos iste aut impedit voluptates voluptatem sint numquam ipsam eum magnam saepe eligendi dolores. Voluptate molestias facere, necessitatibus architecto quis voluptates rem pariatur modi nostrum voluptas quisquam error tempora perspiciatis dicta.</p>
+                            </p>
+                        </div>
+
+                        <div id="newest-post__button">
+                            <a href="#first-p">Read more...</a>
+                        </div>
                     </div>
 
-                    <div class="card-preview">
+                    <!-- <div class="card-preview">
                         <h2 class="card-preview__h2">
                             Lorem ipsum dolor sit amet.
                         </h2>
@@ -122,7 +151,7 @@
                             vero quos aliquam facilis ut dolore quaerat.
                         </p>
                         <div class="card__button">Read More...</div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="grid-item-3 footer"></div>
