added social media icons to footer + javaScript stuff
javaScript - made the page scroll back to top and close the main article if it is expanded

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <script src="https://kit.fontawesome.com/207165ede1.js" crossorigin="anonymous"></script>
         <link
             href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap"
             rel="stylesheet"
@@ -26,7 +27,7 @@
         </nav> -->
 
         <div class="grid-container">
-            <div class="grid-item-1 header">
+            <div class="grid-item-1 header" id="header">
                 <div class="header__logo">
                     <img src="images/iphone5noBG.png" alt="" />
                 </div>
@@ -154,7 +155,15 @@
                     </div> -->
                 </div>
             </div>
-            <div class="grid-item-3 footer"></div>
+            <div class="grid-item-4 small-footer"><a href="#" id="backToTop">back to top</a></div>
+            <div class="grid-item-3 footer">
+                <div class="footer__content">
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fas fa-envelope"></i>
+                </div>
+               
+            </div>
         </div>
         <script src="script.js"></script>
     </body>
