--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <div class="grid-item-2 content">
                 <nav class="navbar">
                     <ul class="navbar__ul">
-                        <li class="nav__li">LINK 1</li>
-                        <li class="nav__li">LINK 2</li>
-                        <li class="nav__li">LINK 3</li>
-                        <li class="nav__li">LINK 4</li>
+                        <li class="nav__li">BLOG</li>
+                        <li class="nav__li">CALENDAR</li>
+                        <li class="nav__li">COLLECTION</li>
+                        <li class="nav__li">UPCOMING</li>
                     </ul>
                 </nav>
                 <div class="recent-posts">
@@ -158,8 +158,8 @@
             <div class="grid-item-4 small-footer"><a href="#" id="backToTop">back to top</a></div>
             <div class="grid-item-3 footer">
                 <div class="footer__content">
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-twitter"></i>
+                    <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
                     <i class="fas fa-envelope"></i>
                 </div>
                
