--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
             <!-- footer -->
             <div class="grid-item-3 footer">
                 <div class="footer__content">
-                    <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
-                    <i class="fas fa-envelope"></i>
+                    <a href="https://www.instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
+                    <a href="https://www.twitter.com"><i class="fab fa-twitter fa-2x"></i></a>
+                    <i class="fas fa-envelope fa-2x"></i>
                 </div>
                
             </div>
