changed some placeholder text

--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
                             architecto sequi enim, officia vitae at magnam nobis
                             cum a harum ducimus, cupiditate facilis aut
                             voluptate sit ipsam impedit in reiciendis voluptas
-                            id excepturi porro? Provident cum aliquid incidunt
-                            vero quos aliquam facilis ut dolore quaerat...
+                            id excepturi porro?...
                         </p>
                         <!-- hidden content until readmore is clicked -->
                         <div class="newest-post__hidden" id="hidden">
@@ -77,15 +76,7 @@
                                 reprehenderit, commodi, aperiam amet molestiae
                                 voluptate soluta cum mollitia delectus nostrum
                                 velit quas sit quos qui harum ducimus, rem
-                                aliquid omnis! Ea fuga, obcaecati assumenda
-                                labore autem reprehenderit dolor impedit amet
-                                expedita, ex accusamus repellendus modi in
-                                perferendis animi? Voluptatibus recusandae minus
-                                enim ratione? Error dolorem libero perferendis
-                                ipsa, earum nobis atque ducimus laudantium
-                                obcaecati labore et sit sequi, nisi ab enim ex
-                                asperiores soluta delectus tempore assumenda
-                                neque ipsam quo! Et. lorem100
+                                aliquid omnis!
                             </p>
 
                             <p>
@@ -107,12 +98,13 @@
                                 ipsa, earum nobis atque ducimus laudantium
                                 obcaecati labore et sit sequi, nisi ab enim ex
                                 asperiores soluta delectus tempore assumenda
-                                neque ipsam quo! Et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores laboriosam perspiciatis accusantium quae sit, dolore reiciendis, aspernatur quas exercitationem quos iste aut impedit voluptates voluptatem sint numquam ipsam eum magnam saepe eligendi dolores. Voluptate molestias facere, necessitatibus architecto quis voluptates rem pariatur modi nostrum voluptas quisquam error tempora perspiciatis dicta.</p>
+                                neque ipsam quo! Et.</p>
+                                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores laboriosam perspiciatis accusantium quae sit, dolore reiciendis, aspernatur quas exercitationem quos iste aut impedit voluptates voluptatem sint numquam ipsam eum magnam saepe eligendi dolores. Voluptate molestias facere, necessitatibus architecto quis voluptates rem pariatur modi nostrum voluptas quisquam error tempora perspiciatis dicta.</p>
                             </p>
                         </div>
                         <!-- read mmore button at the bottom -->
                         
-                        <a href="#first-p" id="newest-post__button">Read more...</a>
+                        <a href="#first-p" id="newest-post__button">Read more</a>
                         
                     </div>
 
@@ -120,7 +112,9 @@
                 </div>
             </div>
             <!-- grid area right above the footer for the back to top link -->
-            <div class="grid-item-4 small-footer"><a href="#" id="backToTop">back to top</a></div>
+            <div class="grid-item-4 small-footer">
+                <a href="#" id="backToTop">back to top</a>
+            </div>
             <!-- footer -->
             <div class="grid-item-3 footer">
                 <div class="footer__content">
