--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                         ></iframe>
-                        <p class="newest-post__p" id="newest-post__p-visible">
+                        <p class="newest-post__p" id="yaboiii">
                             Lorem ipsum dolor sit amet consectetur adipisicing
                             elit. Qui in odit dicta dolorem non sequi, rerum
                             consequatur ipsa dolore quasi sint ratione repellat
@@ -65,7 +65,7 @@
                             voluptate sit ipsam impedit in reiciendis voluptas
                             id excepturi porro?...
                         </p>
-                        <!-- hidden content until readmore is clicked -->
+                        <!-- hidden content until read more is clicked -->
                         <div class="newest-post--hidden" id="hidden">
                             <p>
                                 Lorem ipsum dolor sit amet consectetur
@@ -124,9 +124,7 @@
                             </p>
                         </div>
                         <!-- read more button / back to top button-->
-                        <a
-                            href="#newest-post__p-visible"
-                            id="newest-post__button"
+                        <a href="#yaboiii" id="newest-post__button"
                             >Read more</a
                         >
                         <a href="#" id="backToTop">back to top</a>
