--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <!-- sticky nav bar -->
             <section class="grid-item-2 content">
                 <nav class="navbar">
+                    <i class="fas fa-bars fa-2x" id="hamburger"></i>
                     <ul class="navbar__ul">
                         <li class="nav__li"><a href="#">BLOG</a></li>
                         <li class="nav__li"><a href="#">CALENDAR</a></li>
