more light theme stuff

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </section>
 
             <!-- grid item 3 -->
-            <section class="grid-item-3 footer">
+            <section class="grid-item-3 footer" id="footer">
                 <!-- footer -->
                 <div class="footer__content">
                     <a href="https://www.instagram.com"
