--- a/index.html
+++ b/index.html
@@ -75,11 +75,7 @@
                             exercitationem nam impedit molestiae natus suscipit
                             ratione dolore ea beatae vitae odio architecto
                             fugiat repellat voluptate, illum tenetur modi
-                            facilis nobis, ex vel placeat. Eveniet accusantium
-                            architecto sequi enim, officia vitae at magnam nobis
-                            cum a harum ducimus, cupiditate facilis aut
-                            voluptate sit ipsam impedit in reiciendis voluptas
-                            id excepturi porro?...
+                            facilis nobis, ex vel placeat...
                         </p>
                         <!-- hidden content until read more is clicked -->
                         <div class="newest-post--hidden" id="hidden">
