--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         <nav class="navbar" id="navbar">
             <i class="fas fa-bars fa-2x" id="hamburger"></i>
             <ul class="navbar__ul" id="navbar__ul">
-                <li class="nav__li"><a href="#">BLOG</a></li>
-                <li class="nav__li"><a href="#">DROPS</a></li>
-                <li class="nav__li"><a href="#">COLLECTION</a></li>
-                <li class="nav__li"><a href="#">CONTACT</a></li>
+                <li class="nav__li"><a href="../pages/404.html">BLOG</a></li>
+                <li class="nav__li"><a href="../pages/404.html">DROPS</a></li>
+                <li class="nav__li">
+                    <a href="../pages/404.html">COLLECTION</a>
+                </li>
+                <li class="nav__li"><a href="../pages/404.html">CONTACT</a></li>
             </ul>
         </nav>
         <div id="darken"></div>
@@ -43,10 +45,18 @@
                 <!-- desktop sticky nav bar -->
                 <nav class="navbar" id="sticky-navbar">
                     <ul class="navbar__ul" id="navbar__ul">
-                        <li class="nav__li"><a href="#">BLOG</a></li>
-                        <li class="nav__li"><a href="#">DROPS</a></li>
-                        <li class="nav__li"><a href="#">COLLECTION</a></li>
-                        <li class="nav__li"><a href="#">CONTACT</a></li>
+                        <li class="nav__li">
+                            <a href="../pages/404.html">BLOG</a>
+                        </li>
+                        <li class="nav__li">
+                            <a href="../pages/404.html">DROPS</a>
+                        </li>
+                        <li class="nav__li">
+                            <a href="../pages/404.html">COLLECTION</a>
+                        </li>
+                        <li class="nav__li">
+                            <a href="../pages/404.html">CONTACT</a>
+                        </li>
                     </ul>
                 </nav>
                 <!-- newest post + a few most recent posts container -->
