--- a/pages/404.html
+++ b/pages/404.html
@@ -53,7 +53,7 @@
                 <div class="error-message">
                     <i
                         style="color: rgb(255, 183, 49)"
-                        class="fas fa-exclamation-triangle fa-10x"
+                        class="fas fa-undo fa-7x"
                     ></i>
                     <a class="home" href="../index.html">return home</a>
                 </div>
