--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <nav class="navbar" id="navbar">
             <i class="fas fa-bars fa-2x" id="hamburger"></i>
             <ul class="navbar__ul" id="navbar__ul">
-                <li class="nav__li"><a href="../pages/404.html">BLOG</a></li>
-                <li class="nav__li"><a href="../pages/404.html">DROPS</a></li>
+                <li class="nav__li"><a href="pages/404.html">BLOG</a></li>
+                <li class="nav__li"><a href="pages/404.html">DROPS</a></li>
                 <li class="nav__li">
                     <a href="../pages/404.html">COLLECTION</a>
                 </li>
-                <li class="nav__li"><a href="../pages/404.html">CONTACT</a></li>
+                <li class="nav__li"><a href="pages/404.html">CONTACT</a></li>
             </ul>
         </nav>
         <div id="darken"></div>
@@ -46,16 +46,16 @@
                 <nav class="navbar" id="sticky-navbar">
                     <ul class="navbar__ul" id="navbar__ul">
                         <li class="nav__li">
-                            <a href="../pages/404.html">BLOG</a>
+                            <a href="pages/404.html">BLOG</a>
                         </li>
                         <li class="nav__li">
-                            <a href="../pages/404.html">DROPS</a>
+                            <a href="pages/404.html">DROPS</a>
                         </li>
                         <li class="nav__li">
-                            <a href="../pages/404.html">COLLECTION</a>
+                            <a href="pages/404.html">COLLECTION</a>
                         </li>
                         <li class="nav__li">
-                            <a href="../pages/404.html">CONTACT</a>
+                            <a href="pages/404.html">CONTACT</a>
                         </li>
                     </ul>
                 </nav>
