light mode / dark mode choice should be saved now in local storage
when a person chooses a theme it will stay that way throughout the website

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
             <ul class="navbar__ul" id="navbar__ul">
                 <li class="nav__li"><a href="pages/404.html">BLOG</a></li>
                 <li class="nav__li"><a href="pages/404.html">DROPS</a></li>
-                <li class="nav__li">
-                    <a href="../pages/404.html">COLLECTION</a>
-                </li>
+                <li class="nav__li"><a href="pages/404.html">COLLECTION</a></li>
                 <li class="nav__li"><a href="pages/404.html">CONTACT</a></li>
             </ul>
         </nav>
