--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- mobile nav bar -->
         <nav class="navbar" id="navbar">
             <i class="fas fa-bars fa-2x" id="hamburger"></i>
-            <ul class="navbar__ul" id="navbar__ul">
+            <ul class="navbar__ul" id="navbar__ul-mobile">
                 <li class="nav__li" id="modeToggle">
                     <i
                         class="fas fa-adjust fa-lg modeToggle"
@@ -48,7 +48,7 @@
             <section class="grid-item-2 content" id="content">
                 <!-- desktop sticky nav bar -->
                 <nav class="navbar" id="sticky-navbar">
-                    <ul class="navbar__ul" id="navbar__ul">
+                    <ul class="navbar__ul" id="navbar__ul-desktop">
                         <li class="nav__li">
                             <i
                                 class="fas fa-adjust fa-lg modeToggle"
