--- a/pages/404.html
+++ b/pages/404.html
@@ -20,7 +20,13 @@
         <!-- mobile nav bar -->
         <nav class="navbar" id="navbar">
             <i class="fas fa-bars fa-2x" id="hamburger"></i>
-            <ul class="navbar__ul" id="navbar__ul">
+            <ul class="navbar__ul" id="navbar__ul-mobile">
+                <li class="nav__ul">
+                    <i
+                        class="fas fa-adjust fa-lg modeToggle"
+                        id="modeToggleMobile"
+                    ></i>
+                </li>
                 <li class="nav__li"><a href="#">BLOG</a></li>
                 <li class="nav__li"><a href="#">DROPS</a></li>
                 <li class="nav__li"><a href="#">COLLECTION</a></li>
@@ -42,7 +48,13 @@
             <section class="grid-item-2 content" id="content">
                 <!-- desktop sticky nav bar -->
                 <nav class="navbar" id="sticky-navbar">
-                    <ul class="navbar__ul" id="navbar__ul">
+                    <ul class="navbar__ul" id="navbar__ul-desktop">
+                        <li class="nav__ul">
+                            <i
+                                class="fas fa-adjust fa-lg modeToggle"
+                                id="modeToggleDesktop"
+                            ></i>
+                        </li>
                         <li class="nav__li"><a href="#">BLOG</a></li>
                         <li class="nav__li"><a href="#">DROPS</a></li>
                         <li class="nav__li"><a href="#">COLLECTION</a></li>
