added "theme"next to the theme picker icon

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         <nav class="navbar" id="navbar">
             <i class="fas fa-bars fa-2x" id="hamburger"></i>
             <ul class="navbar__ul" id="navbar__ul-mobile">
-                <li class="nav__li" id="modeToggle">
+                <li class="nav__li theme" id="modeToggle">
                     <i
                         class="fas fa-adjust fa-lg modeToggle"
                         id="modeToggleMobile"
-                    ></i>
+                    >
+                        THEME</i
+                    >
                 </li>
                 <li class="nav__li"><a href="pages/404.html">BLOG</a></li>
                 <li class="nav__li"><a href="pages/404.html">DROPS</a></li>
@@ -49,11 +51,13 @@
                 <!-- desktop sticky nav bar -->
                 <nav class="navbar" id="sticky-navbar">
                     <ul class="navbar__ul" id="navbar__ul-desktop">
-                        <li class="nav__li">
+                        <li class="nav__li theme">
                             <i
                                 class="fas fa-adjust fa-lg modeToggle"
                                 id="modeToggleDesktop"
-                            ></i>
+                            >
+                                THEME</i
+                            >
                         </li>
                         <li class="nav__li">
                             <a href="pages/404.html">BLOG</a>
