--- a/pages/404.html
+++ b/pages/404.html
@@ -21,14 +21,14 @@
         <nav class="navbar" id="navbar">
             <i class="fas fa-bars fa-2x" id="hamburger"></i>
             <ul class="navbar__ul" id="navbar__ul-mobile">
-                <li class="nav__li theme">
+                <!-- <li class="nav__li theme">
                     <i
                         class="fas fa-adjust fa-lg modeToggle"
                         id="modeToggleMobile"
                     >
                         THEME</i
                     >
-                </li>
+                </li> -->
                 <li class="nav__li"><a href="#">BLOG</a></li>
                 <li class="nav__li"><a href="#">DROPS</a></li>
                 <li class="nav__li"><a href="#">COLLECTION</a></li>
@@ -51,14 +51,14 @@
                 <!-- desktop sticky nav bar -->
                 <nav class="navbar" id="sticky-navbar">
                     <ul class="navbar__ul" id="navbar__ul-desktop">
-                        <li class="nav__li theme">
+                        <!-- <li class="nav__li theme">
                             <i
                                 class="fas fa-adjust fa-lg modeToggle"
                                 id="modeToggleDesktop"
                             >
                                 THEME</i
                             >
-                        </li>
+                        </li> -->
                         <li class="nav__li"><a href="#">BLOG</a></li>
                         <li class="nav__li"><a href="#">DROPS</a></li>
                         <li class="nav__li"><a href="#">COLLECTION</a></li>
