i added light theme button back for now

--- a/pages/404.html
+++ b/pages/404.html
@@ -24,9 +24,7 @@
                 <!-- <li class="nav__li theme">
                     <i
                         class="fas fa-adjust fa-lg modeToggle"
-                        id="modeToggleMobile"
-                    >
-                        THEME</i
+                        id="modeToggleMobile"></i
                     >
                 </li> -->
                 <li class="nav__li"><a href="#">BLOG</a></li>
@@ -51,14 +49,14 @@
                 <!-- desktop sticky nav bar -->
                 <nav class="navbar" id="sticky-navbar">
                     <ul class="navbar__ul" id="navbar__ul-desktop">
-                        <!-- <li class="nav__li theme">
+                        <li class="nav__li theme">
                             <i
                                 class="fas fa-adjust fa-lg modeToggle"
                                 id="modeToggleDesktop"
                             >
                                 THEME</i
                             >
-                        </li> -->
+                        </li>
                         <li class="nav__li"><a href="#">BLOG</a></li>
                         <li class="nav__li"><a href="#">DROPS</a></li>
                         <li class="nav__li"><a href="#">COLLECTION</a></li>
