--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
         <nav class="navbar" id="navbar">
             <i class="fas fa-bars fa-2x" id="hamburger"></i>
             <ul class="navbar__ul" id="navbar__ul-mobile">
-                <!-- <li class="nav__li theme" id="modeToggle">
+                <li class="nav__li theme" id="modeToggle">
                     <i
                         class="fas fa-adjust fa-lg modeToggle"
                         id="modeToggleMobile"
-                    >
-                        THEME</i
-                    >
-                </li> -->
+                    ></i>
+                </li>
                 <li class="nav__li"><a href="pages/404.html">BLOG</a></li>
                 <li class="nav__li"><a href="pages/404.html">DROPS</a></li>
                 <li class="nav__li"><a href="pages/404.html">COLLECTION</a></li>
@@ -51,14 +49,14 @@
                 <!-- desktop sticky nav bar -->
                 <nav class="navbar" id="sticky-navbar">
                     <ul class="navbar__ul" id="navbar__ul-desktop">
-                        <!-- <li class="nav__li theme">
+                        <li class="nav__li theme">
                             <i
                                 class="fas fa-adjust fa-lg modeToggle"
                                 id="modeToggleDesktop"
                             >
                                 THEME</i
                             >
-                        </li> -->
+                        </li>
                         <li class="nav__li">
                             <a href="pages/404.html">BLOG</a>
                         </li>
