--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 
         <!-- grid -->
         <div class="grid-container">
-            <!-- grid item 1 -->
+            <!-- grid item 1 /HEADER-->
             <header class="grid-item-1 header" id="header">
                 <div class="header__logo" id="logo">
                     <img src="images/iphone5noBG.png" alt="" />
                 </div>
             </header>
 
-            <!-- grid item 2 -->
+            <!-- grid item 2  /STICKY NAVBAR AND MAIN CONTENT-->
             <section class="grid-item-2 content" id="content">
                 <!-- desktop sticky nav bar -->
                 <nav class="navbar" id="sticky-navbar">
@@ -161,15 +161,22 @@
                             </p>
                         </div>
                         <!-- read more button / back to top button-->
-                        <a href="#yaboiii" id="newest-post__button"
-                            >Read more</a
-                        >
-                        <a href="#" id="backToTop">back to top</a>
+                        <a href="#yaboiii" id="newest-post__button">
+                            Read more
+                        </a>
+                        <a href="#" id="backToTop"> back to top </a>
                     </article>
                 </main>
+
+                <!-- this will be a grid of recent posts that will link to another page with anchor ref -->
+                <!-- <section class="recentPosts-grid">
+                    <div class="item-1">1</div>
+                    <div class="item-2">2</div>
+                    <div class="item-3">3</div>
+                </section> -->
             </section>
 
-            <!-- grid item 3 -->
+            <!-- grid item 3 /FOOTER-->
             <section class="grid-item-3 footer" id="footer">
                 <!-- footer -->
                 <div class="footer__content">
